# strategic_planning_AI

./: .gitignore  .gitmodules  README.md  docker_compose.yml  requirements.txt
architecture/: 01_overview_simplified.puml  02_overview_detailed.puml  20_01_component_agent_service.puml  20_01_component_microservices_detail.puml  20_02_component_rag_service.puml  20_03_component_analysis_service.puml  20_layer_service_microservices.puml  30_01_component_ingestion_pipeline.puml  30_layer_knowledge_data.puml  40_sequence_runtime_flows.puml  A01_overview_simplified.puml  A02_overview_detailed.puml  A0_01_overview_simplified.puml  A0_02_overview_detailed.puml  A10_layer_client.puml  A1_layer_client.puml  A20_01_component_agent_service.puml  A20_02_component_rag_service.puml  A20_03_component_analysis_service.puml  A20_layer_service_microservices.puml  A2_01_component_agent_service.puml  A2_02_component_rag_service.puml  A2_03_component_analysis_service.puml  A2_layer_service_microservices.puml  A30_01_component_ingestion_pipeline.puml  (+31 more)
services/analysis_layer/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
services/analysis_layer/app/: __init__.py  main.py
services/analysis_layer/app/api/: __init__.py  router.py
services/analysis_layer/app/api/v1/: decision.py  optimization.py  rules.py  scenario.py
services/analysis_layer/app/core/: config.py  logging.py
services/analysis_layer/app/models/: __init__.py  requests.py  responses.py
services/analysis_layer/app/services/: __init__.py  decision.py  optimization.py  rules.py  scenario.py
(+4 files in other folders)
