[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analysis-layer-service"
version = "0.1.0"
description = "Strategic planning analysis layer microservice scaffolding."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "structlog>=25.2.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "ruff>=0.6.9",
    "pytest>=8.3.5",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
